appId: com.sawiyaa.mobile
---
- runFlow: patient-login.yaml
- tapOn:
    text: "Notifications|الإشعارات"
- assertVisible:
    id: "notifications-screen"
- assertNotVisible:
    text: "FATAL EXCEPTION"
