appId: com.sawiyaa.mobile
---
- runFlow: patient-login.yaml
- tapOn:
    text: "Payments|المدفوعات"
- assertVisible:
    text: "Payments|المدفوعات"
- assertNotVisible:
    text: "FATAL EXCEPTION"
