appId: com.sawiyaa.mobile
---
- runFlow: practitioner-login.yaml
- tapOn:
    text: "Messages|الرسائل"
- assertVisible:
    id: "messages-inbox-screen"
- tapOn:
    text: "Support|الدعم"
- assertNotVisible:
    text: "FATAL EXCEPTION"
