appId: com.sawiyaa.mobile
---
- runFlow: practitioner-login.yaml
- tapOn:
    text: "Sessions|الجلسات"
- assertVisible:
    text: "Sessions|الجلسات"
- tapOn:
    text: "Upcoming|القادمة"
- assertNotVisible:
    text: "FATAL EXCEPTION"
